src/objects/SMS_Outbound__c.object
<CustomObject>
    <fields>
        <fullName>Failed_Reason__c</fullName>
        <label>Failed Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_message__c</fullName>
        <label>SMS message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMS_status__c</fullName>
        <label>SMS status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SMS Outbound</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SMS_status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Mobile__c</columns>
        <columns>SMS_message__c</columns>
        <columns>Failed_Reason__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>spuli</fullName>
        <columns>NAME</columns>
        <columns>SMS_message__c</columns>
        <columns>Mobile__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mobile__c</field>
            <operation>equals</operation>
            <value>9062493190</value>
        </filters>
        <label>spuli</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{0000000}</displayFormat>
        <label>SMS Outbound Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Outbound</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>